--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,12 @@
       type="text/css"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/6.5.2/css/font-awesome.min.css"
     />
-    <title>My app</title>
+    <link
+      rel="icon"
+      href="https://stackblitz.com/storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBell4RGc9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--e1fda062879e9ceec452eaaa4694d526de317288/gris%20logo.png"
+      sizes="32x32"
+    />
+    <title>Portafolio</title>
     <meta charset="UTF-8" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
@@ -23,6 +28,7 @@
   </head>
   <body class="mat-typography">
     <app-root>Loading...</app-root>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
