--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
       type="text/css"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/6.5.2/css/font-awesome.min.css"
     />
-
     <link
       rel="icon"
-      href=" https://flowbite.com/docs/images/logo.svg"
+      href="https://stackblitz.com/storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBell4RGc9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--e1fda062879e9ceec452eaaa4694d526de317288/gris%20logo.png"
       sizes="32x32"
     />
     <title>Portafolio</title>
