--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     />
     <link
       rel="icon"
-      href="https://stackblitz.com/storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBell4RGc9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--e1fda062879e9ceec452eaaa4694d526de317288/gris%20logo.png"
-      sizes="32x32"
+      href="https://stackblitz.com/storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBNWt4RGc9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--f62b5950707c670df0d7263d2b23e244642095d3/logo.png"
+      sizes="40x40"
     />
     <title>Portafolio</title>
     <meta charset="UTF-8" />
