--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,10 @@
     />
   </head>
   <body class="mat-typography">
-    <app-root>Loading...</app-root>
+      
+    <app-root>
+
+    </app-root>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
